kunpro-44 Fix low contrast issues (#17)
* Change review badge color

* Add text class for gray-70

--- a/scss/base/colors.scss
+++ b/scss/base/colors.scss
@@ -307,6 +307,10 @@
   color: $gray-base-50;
 }
 
+.text-gray-base-70 {
+  color: $gray-base-70;
+}
+
 .text-green {
   color: $green;
 }
